<resources>
    <string name="app_name">Neighbors</string>
    <string name="Email">Email</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Logout">Logout</string>
    <string name="Message">Message</string>
    <string name="Post">Post</string>
    <string name="Cancel">Cancel</string>
    <string name="Username_init">Enter User Name</string>
    <string name="Register">Register</string>
    <string name="UserName">User Name</string>
    <string name="Submit">Submit</string>
    <string name="Choose">Choose a photo.</string>


</resources>
